# rusty-platformer

./: .gitignore  Cargo.toml  LICENSE  README.md
engine/: Cargo.toml
engine/config/: input_config.json
engine/src/: app.rs  assets.rs  components.rs  entity.rs  game_loop.rs  input.rs  lib.rs  math.rs  render.rs  time.rs  timer.rs
engine/src/components/: component.rs  image_component.rs  input_component.rs  mod.rs  transform_component.rs
engine/src/core/: app.rs  assets.rs  input.rs  mod.rs  path_utils.rs  render.rs  timer.rs
engine/src/entity/: entity.rs  entity_spawner.rs  mod.rs
engine/src/math/: mod.rs  vec2.rs
engine_derive/: Cargo.toml
engine_derive/src/: lib.rs
game/: Cargo.toml  build.rs
game/src/: main.rs  player.rs
