[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
engine_derive = { path = "../engine_derive" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Linux & macOS
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
sdl2 = { version = "0.38.0", features = ["image", "ttf", "mixer"] }

# Windows
[target.'cfg(target_os = "windows")'.dependencies]
sdl2 = { version = "0.38.0", features = ["bundled"] }
